# rail

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  conda-reqs.txt  environment.yml  get_data.py  pyproject.toml  rail_packages.yml  render_nb.py  requirements.txt
.github/ISSUE_TEMPLATE/: 0-general_issue.md
.github/workflows/: build_documentation.yml  linting.yml  main.yml  publish-to-pypi.yml  pypi.yaml  smoke-test-head.yml  smoke-test-interactive.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  demos.rst  index.rst  nbconvert-requirements.txt  requirements.txt
docs/source/: catalog_tags.rst  citing.rst  contributing.rst  creation_algo.rst  creation_degrader_algos.rst  creation_engine_algos.rst  data_handles.rst  demonstrations.rst  demos.rst  documentation.rst  estimators.rst  fix_an_issue.rst  installation.rst  new_algorithm.rst  new_rail_stage.rst  overview.rst  pipelines.rst  rail_cli.rst  sharing_pipeline.rst  stages.rst  start_here.rst  summarizers.rst  types_of_stages.rst
examples/: .gitignore
examples/core_examples/: 00_Useful_Utilities.ipynb  01_FileIO_DataStore.ipynb  02_FluxtoMag_and_Deredden.ipynb  03_Hyperbolic_Magnitude.ipynb  04_Iterate_Tabular_Data.ipynb  05_Build_Save_Load_Run_Pipeline.ipynb  Build_Save_Load_Run_Pipeline.ipynb  FileIO_DataStore.ipynb  FluxtoMag_and_Deredden_example.ipynb  Iterate_Tabular_Data.ipynb  Pipe_Example.ipynb  Run_Pipe.ipynb  Run_Saved_Pipeline.ipynb  Useful_Utilities.ipynb  Writing_Pipelines.ipynb  hyperbolic_magnitude_test.ipynb  iterator_test.ipynb  model_inform_trainz.pkl  pipe_example.yml  pipe_example_config.yml
examples/creation_examples/: 00_Quick_Start_in_Creation.ipynb  01_Photerr.ipynb  01_Photometric_Realization.ipynb  02_Photometric_Realization_with_Other_Surveys.ipynb  03_GridSelection_for_HSC.ipynb  04_Plotting_interface_skysim_cosmoDC2_COSMOS2020.ipynb  05_True_Posterior.ipynb  06_Blending_Degrader.ipynb  07_DSPS_SED.ipynb  08_FSPS_SED.ipynb  09_Observing_Conditions.ipynb  09_Spatial_Variability.ipynb  10_SOM_Spectroscopic_Selector.ipynb  11_Spectroscopic_Selection_for_zCOSMOS.ipynb  Use_FSPS_to_Generate_SEDs.ipynb  blending_degrader_demo.ipynb  degradation-demo.ipynb  dsps_sed_demo.ipynb  example_GridSelection_for_HSC.ipynb  example_ObsConditions.ipynb  example_SOMSpecSelector.ipynb  example_SpecSelection_for_zCOSMOS.ipynb  photerr_demo.ipynb  photometric_realization_demo.ipynb  plotting_interface_skysim_cosmoDC2_COSMOS2020_demo.ipynb  posterior-demo.ipynb
examples/estimation_examples/: 00_Quick_Start_in_Estimation.ipynb  01_FlexZBoost_PDF_Representation_Comparison.ipynb  02_BPZ_lite.ipynb  03_BPZ_lite_Custom_SEDs.ipynb  04_CMNN.ipynb  05_DNF.ipynb  07_NZDir.ipynb  09_PZFlow.ipynb  09_pzflow.ipynb  10_YAW.ipynb  11_SomocluSOM.ipynb  12_SomocluSOM_Quality_Control.ipynb  13_Sampled_Summarizers.ipynb  14_LePhare_LSST.ipynb  15_LePhare_COSMOS.ipynb  15_Running_with_different_data.ipynb  16_Running_with_different_data.ipynb  BPZ_lite_demo.ipynb  BPZ_lite_with_custom_SEDs.ipynb  CMNN_Demo.ipynb  DNF_Demo.ipynb  Fzboost_PDF_Representation_Comparison.ipynb  GPz_Estimation_Example.ipynb  GPz_estimation_example.ipynb  NZDir.ipynb  RAIL_estimation_demo.ipynb  README.md  SimpleSOM_demo.ipynb.fixme  nzdir_as_pipeline.ipynb  pzflow_demo.ipynb  rail_yaw_demo.ipynb  rail_yaw_demo.iynb  somocluSOM_cluster_qc_demo.ipynb  somocluSOM_demo.ipynb  somocluSOMcluster_demo.ipynb  test_sampled_summarizers.ipynb
examples/evaluation_examples/: 00_Single_Evaluation.ipynb  01_Evaluation_by_Type.ipynb  Evaluation_Demo.ipynb  Evaluation_by_type.ipynb  demo.ipynb  utils.py
examples/goldenspike_examples/: Goldenspike.ipynb  README.md  cleanup.sh  cleanup_pipeline.sh  goldenspike.ipynb  goldenspike.yml  goldenspike_config.yml
interactive_examples/: .gitignore  Converting_galaxy_magnitudes_to_photometric_redshifts.ipynb  Estimating_Redshifts_and_Comparing_Results_for_Different_Parameters.ipynb  Example_RAIL_workflow_with_iteration_over_parameters.ipynb  Exploring_the_Effects_of_Degraders.ipynb  New_Tutorial_Notebook_Template.ipynb  README.md  Using_Galaxy_Magnitudes_to_Estimate_Photometric_Redshifts.ipynb  Using_Photometry_to_Estimate_Photometric_Redshifts.ipynb  iterating_over_params.ipynb  new_notebook_3.ipynb  wip.ipynb
interactive_examples/core_examples/: 02_FluxtoMag_and_Deredden.ipynb  03_Hyperbolic_Magnitude.ipynb  FluxtoMag_and_Deredden.ipynb  Hyperbolic_Magnitude.ipynb
interactive_examples/creation_examples/: 00_Quick_Start_in_Creation.ipynb  01_Photometric_Realization.ipynb  02_Photometric_Realization_with_Other_Surveys.ipynb  03_GridSelection_for_HSC.ipynb  05_True_Posterior.ipynb  06_Blending_Degrader.ipynb  07_DSPS_SED.ipynb  08_FSPS_SED.ipynb  09_Spatial_Variability.ipynb  10_SOM_Spectroscopic_Selector.ipynb  11_Spectroscopic_Selection_for_zCOSMOS.ipynb  Blending_Degrader.ipynb  DSPS_SED.ipynb  Exploring_the_Effects_of_Degraders.ipynb  FSPS_SED.ipynb  GridSelection_for_HSC.ipynb  Photometric_Realization.ipynb  Photometric_Realization_with_Other_Surveys.ipynb  Quick_Start_in_Creation.ipynb  SOM_Spectroscopic_Selector.ipynb  Spatial_Variability.ipynb  Spectroscopic_Selection_for_zCOSMOS.ipynb  True_Posterior.ipynb
interactive_examples/estimation_examples/: 00_Quick_Start_in_Estimation.ipynb  02_BPZ_lite.ipynb  (+28 more)
tests/: test_import.py  test_scripts.py
(+95 files in other folders)
